# crewchief

./: .dockerignore  .env.example  .gitignore  .gitmodules  .maproomignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREWCHIEF_DEVELOPMENT_HISTORY.md  Cargo.toml  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile.validation  LICENSE  LOCAL_PROJECT_COMPLETE.md  MIGRATION.md  Makefile  PERFORMANCE_SUMMARY_CONTEXT_ASM_3003.md  README.md  RELEASE.md  SECURITY-AUDIT.md  SECURITY.md  TESTDES-2004_COMPLETION_SUMMARY.md  arm64-validation-test.sh  crewchief.config.example.js  crewchief.config.example.ts  crewchief.config.js  crewchief.config.sample.ts  crewchief.config.ts  crewchief_analysis.md  docker-compose.dev.yml  docker-compose.yml  final-rust-audit.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  public-readiness-checklist.md  pyproject.toml  (+6 more)
crates/gunmetal/: Cargo.toml  README.md  SECURITY_REVIEW.md
crates/gunmetal/sources/docs/: architecture.md  core-api.md  data-patterns.md  extended-api.md  index.md  networking.md  quickstart.md  rad.md  sea.md  typescript-types.md  user-api.md  utilities.md
crates/gunmetal/src/: cert.rs  concurrency.rs  crdt.rs  dup.rs  events.rs  extended.rs  graph.rs  instance.rs  lex.rs  lib.rs  mesh.rs  relay.rs  runtime.rs  sea.rs  state.rs  sync.rs  types.rs  user.rs  uuid.rs  wasm.rs  wire.rs
crates/gunmetal/src/rad/: fs_store.rs  idb_store.rs  mod.rs  radisk.rs  radix.rs  store.rs
crates/gunmetal/src/storage/: engine.rs  indexeddb.rs  mod.rs
crates/gunmetal/src/transport/: mod.rs  peers.rs  reconnect.rs  ws_native.rs  ws_wasm.rs
crates/gunmetal/tests/: gunjs_interop.rs  integration.rs  rad_integration.rs
crates/gunmetal/tests/interop/: gun-read.cjs  gun-write.cjs
crates/maproom/: .env.example  BENCHMARK_BASELINE.md  BRANCHX_CRITICAL_PATH_STATUS.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_IMPLEMENTATION_SUMMARY.md  Cargo.toml  Dockerfile.benchmark  INCREMENTAL_INTEGRATION_NOTE.md  LICENSE  LICENSE-APACHE  README.md  build.rs  maproom-crate-infographic.html  maproom.config.yaml
crates/maproom/benches/: c_parser_bench.rs  concurrent_operations_bench.rs  confidence_overhead.rs  context_assembly_bench.rs  dedup_bench.rs  embedding_performance.rs  fusion_benchmark.rs  graph_quality_benchmark.rs  importance_scoring.rs  index_tuning_benchmark.rs  indexing.rs  memory.rs  memory_optimization_bench.rs  multi_provider_performance.rs  ollama_parallel_bench.rs  parser_bench.rs  python_parser_bench.rs  search_benchmark.rs  search_relationships.rs  sqlite_benchmark.rs
crates/maproom/config/: maproom-search.yml
crates/maproom/config/alerts/: search_alerts.yml
crates/maproom/config/grafana/: search_dashboard.json
crates/maproom/docs/: AB_TESTING_GUIDE.md  CONCURRENCY.md  MPEMBED-4003-implementation-summary.md  NDJSON_EVENTS.md  PERFORMANCE.md  PERFORMANCE_BOTTLENECKS.md  PERFORMANCE_TUNING.md  VECTOR_SEARCH_CONFIGURATION.md  WEIGHT_TUNING.md  agent-usage.md  c_parser_bench_baseline.md  cli-help-after.md  configuration_guide.md  context_assembly_api.md  context_configuration.md  context_performance_tuning.md  context_query_optimization.md  custom_strategies.md  golden_test_methodology.md  index_tuning_results.md  large_scale_validation.md  monitoring_guide.md  operational_runbook.md  pg_stat_statements_analysis.md  production_migration_guide.md  production_rollout_plan.md  python_parser_validation.md  query_optimization.md  rollback_procedure.md  runbook.md  search_quality_validation.md
crates/maproom/docs/development/: integration-testing.md
crates/maproom/examples/: context_usage.rs  embedding_benchmark.rs
crates/maproom/examples/prototype-sqlite-vec/: Cargo.toml  build.rs
crates/maproom/migrations/: 0000_schema_migrations.sql  0001_init.sql  0002_markdown_support.sql  0003_yaml_toml_support.sql  0004_optimize_vector_indices.sql  0005_create_materialized_views.sql  0006_optimize_gin_index.sql  0007_ab_testing_schema.sql  0008_context_query_optimizations.sql  0009_create_context_cache.sql  0010_add_blake3_hash.sql  0011_python_symbol_kinds.sql  0012_optimize_indices.sql  0013_query_tuning.sql  0014_add_enhanced_symbol_kinds.sql  0015_add_ollama_columns.sql  0015_add_ollama_columns_rollback.sql  0016_add_updated_at_to_chunks.sql  0017_fix_index_size_limits.sql  0018_add_blob_sha.sql  0019_create_code_embeddings.sql  0020_add_worktree_tracking.sql  CLAUDE.md  README.md
crates/maproom/migrations/rollback/: 0017_rollback.sql
crates/maproom/migrations_pg/: 0001_init.sql  0002_code_embeddings.sql  0003_indexes.sql
crates/maproom/scripts/: analyze-queries.sql  analyze.sql  create_fixture.sh  dev_db.sh  load-test.sh  measure_baselines.sh  refresh-views.sql  verify_migration_0015.sh
crates/maproom/src/: content_hash.rs  db.rs  encoding_progress.rs  git.rs  lib.rs  main.rs  profiling.rs  progress.rs  status.rs  upsert.rs  watcher.rs
crates/maproom/src/ab_testing/: analysis.rs  dashboard.rs  framework.rs  logger.rs  mod.rs  shadow_mode.rs
crates/maproom/src/cache/: entry.rs  eviction.rs  invalidation.rs  maintenance.rs  mod.rs  (+3 more)
crates/maproom/tests/: README.md  README_PERFORMANCE_TEST.md  TEST_COVERAGE.md  TRIAGE.md  WATCH_INTEGRATION_TESTS.md  ab_testing_test.rs  c_parser_test.rs  c_real_world_test.rs  cache_management.rs  clean_ignored_integration.rs  cleanup_cli_test.rs  cleanup_deletion_test.rs  cleanup_detection_test.rs  cli_e2e.rs  cli_test.rs  code_blocks_test.rs  concurrent_writes_test.rs  confidence_integration_test.rs  config_backward_compatibility.rs  connection_fallback_test.rs  context_assembler_test.rs  context_parallel_test.rs  cpp_parser_test.rs  create_sqlite_fixture.rs  csharp_parser_test.rs  daemon_error_serialization.rs  debug_link_parser.rs  debug_md_parser.rs  dim1024_integration.rs  dynamic_worktree_id_test.rs  e2e_multi_provider.rs  e2e_workflow_simple.rs  edge_cases_test.rs  edge_extraction_accuracy.rs  edge_extraction_integration.rs  embedding_cache_test.rs  embedding_compatibility_test.rs  embedding_inheritance_test.rs  embedding_integration.rs  embedding_service_test.rs  (+104 more)
(+3888 files in other folders)
