[package]
name = "crewchief-maproom"
version = "0.1.0"
edition = "2021"
description = "Maproom indexer and CLI for CrewChief"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
ignore = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64ct = "1.6.0"
globset = "0.4"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
humantime = "2"

# Database (use tokio-postgres to avoid heavy deps)
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4", "array-impls"] }

# Parsing (Tree-sitter)
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"

[build-dependencies]

[package.metadata.sqlx]
migrate = true


