[package]
name = "crewchief-maproom"
version = "0.1.0"
edition = "2021"
description = "Maproom indexer and CLI for CrewChief"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
ignore = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64ct = "1.6.0"
globset = "0.4"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
humantime = "2"
config = "0.14"

# Database (use tokio-postgres to avoid heavy deps)
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4", "array-impls", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
deadpool = "0.12"

# Parsing (Tree-sitter)
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"

# Embedding service dependencies
reqwest = { version = "0.12", features = ["json"] }
lru = "0.12"

# A/B Testing dependencies
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]

[[bin]]
name = "crewchief-maproom"
path = "src/main.rs"

[lib]
name = "crewchief_maproom"
path = "src/lib.rs"

[package.metadata.sqlx]
migrate = true

[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "fusion_benchmark"
harness = false

[[bench]]
name = "index_tuning_benchmark"
harness = false

[[bench]]
name = "search_benchmark"
harness = false

