[package]
name = "crewchief-maproom"
version = "0.1.0"
edition = "2021"
description = "Maproom indexer and CLI for CrewChief"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
atty = "0.2"
blake3 = "1.5"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
ignore = "0.4.24"
once_cell = "1"
priority-queue = "2.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Monitoring and metrics
# Note: prometheus 0.13 uses vulnerable protobuf 2.28, but no newer version available
# Accepting this risk as prometheus is not processing untrusted data
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
base64ct = "1.8.0"
globset = "0.4.18"

# BRWATCH: File watching and signal handling for automatic branch switch detection
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }  # Cross-platform file system watcher for detecting .git/HEAD changes
ctrlc = "3.2"  # Graceful shutdown handling for Ctrl+C signals

humantime = "2.3"
config = "0.14"

# Database (use tokio-postgres to avoid heavy deps)
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4", "array-impls", "with-uuid-1", "with-serde_json-1"] }
pgvector = { version = "0.4", features = ["postgres"] }
deadpool-postgres = "0.14"
deadpool = "0.12"

# Parsing (Tree-sitter)
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-md = "0.2"

# Embedding service dependencies
reqwest = { version = "0.12", features = ["json"] }
lru = "0.12"

# OpenSSL with vendored feature for cross-platform builds
# The vendored feature statically links OpenSSL, eliminating system dependency
# This ensures builds work with `cross` tool in GitHub Actions (BINPKG-1903)
openssl = { version = "0.10", features = ["vendored"] }

# A/B Testing dependencies
uuid = { version = "1", features = ["v4", "serde"] }

# Token counting for context assembly
tiktoken-rs = "0.5"

# Multi-provider trait abstraction (MPEMBED)
# Used for EmbeddingProvider trait to support OpenAI, Ollama, Google Vertex AI
async-trait = "0.1"

# Google Vertex AI authentication (MPEMBED Phase 3)
# Service account authentication for google-cloud-aiplatform
# Using gcp_auth for reliable OAuth2 access token generation
gcp_auth = "0.12"

# Cache key hashing
sha2 = "0.10"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"
futures = "0.3"

[build-dependencies]

[[bin]]
name = "crewchief-maproom"
path = "src/main.rs"

[lib]
name = "crewchief_maproom"
path = "src/lib.rs"

[package.metadata.sqlx]
migrate = true

[dependencies.puffin]
version = "0.19"
optional = true

[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
serial_test = "3"
wiremock = "0.6"
proptest = "1.4"
sysinfo = "0.32"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["signal"] }

[features]
profiling = ["puffin"]

[[bench]]
name = "fusion_benchmark"
harness = false

[[bench]]
name = "index_tuning_benchmark"
harness = false

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "importance_scoring"
harness = false

[[bench]]
name = "context_assembly_bench"
harness = false

[[bench]]
name = "python_parser_bench"
harness = false

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "concurrent_operations_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "memory_optimization_bench"
harness = false

[[bench]]
name = "multi_provider_performance"
harness = false

[[bench]]
name = "embedding_performance"
harness = false

